--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -8880,7 +8880,7 @@ body {
   margin-top: 15px;
   margin-bottom: 5px;
 }
-.Files_Imported {
+.Imported_Files {
   max-width: 574px;
   margin-left: 12px;
   max-height: 220px;
